+ Added testcase for database clustering functionality. [Dennis-Jan,Peter]
+ Added $before parameter to atkPage's register_script method. [Ivo]
+ Added addCSSClass, getCSSClasses, getCSSClassAttribute methods to
  atkAttribute to customize the CSS class names of each attribute.
  (Not supported yet by all attributes, at least atkAttribute and
  atkTextAttribute work.) [Ivo]
* Fixed bug in getQueryMode and added testcases for the function.
  [Dennis-Jan]
* In case of a ML node and physical_delete flag of the atkfileattribute
  the file were delete twice. But the second it generates an error.
  [Dennis-Jan]
* Changed the dispatch.php in the skel to use atkcontroller object. Note,
  the old method ($obj->dispatch) stills works but is deprecated. It is
  recommended to use the new dispatch.php from the skel directory.
  [Lineke]
* Some functional decomposition of atkSaveHandler [Maurice]
* Added the ability to override an actionHandler class in function
  atkNode::callHandler. [Maurice]
* Added notification for trigger events (eg preAdd, postAdd). [Maurice]
* Added some checks in atkSessionManager to see if the stack really contains
  an atknodetype param. [Maurice]
* Added check in atkUi::title to see if de node was really created.
  [Maurice]
* Added fieldprefix for javascript in atkmanyboolrelation. [Lineke]
* atkManyBoolRelation does not use AMDAE anymore, php now supports multi-
  dimensional arrays (might break in older php versions). [Lineke]
* atkManyToManyRelation now adds tablename before remoteKey when deleting.
  [Lineke]
* On an error atkSaveHandler now determines if it was in admin or add mode.
  A new hidden var 'atkprevaction' is posted in add and edit pages to find
  out. This fixes failed validation to display the wrong page. [Maurice]
* Function dispatch_url now checks if parameter $atkaction contains a value.
  [Maurice]
* Added atkprevaction check to _checkIntegratedSave method in