@@ -122,6 +122,17 @@
         return $tmp;
       }
     }
+    
+    /**
+     * Returns the node file for the given node.
+     *
+     * @param string $node the node type
+     * @return string node filename
+     */
+    function getNodeFile($node)
+    {
+      return nodeFile($node);
+    }
 
     /**
      * Construct a new node. A module can override this method for it's own nodes.
@@ -142,7 +153,7 @@
       }
 
       /* check for file */
-      $file = nodeFile($node);
+      $file = $this->getNodeFile($node);
       if (!file_exists($file))
       {
         atkimport("atk.utils.atkclassloader");
@@ -189,7 +200,7 @@
     function nodeExists($node)
     {
       // check for file
-      $file = nodeFile($node);
+      $file = $this->getNodeFile($node);
       return file_exists($file);
     }
 
